[project]
name = "8-word-ladder"
version = "0.1.0"
description = ""
authors = [
    {name = "Geneviève Le Houx",email = "gnvvlhx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
